# token-slayer

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  boost.json  composer.json  docker-compose.dev.yml  docker-compose.staging.yml  package-lock.json  package.json  vite.config.js  vitest.config.js
config/: game.php  (+5 more)
slayer-cli/: CLAUDE.md  README.md  pyproject.toml
slayer-cli/.ai/domain/: account-slots.md  attribution.md  credstore.md  switching.md  usage.md
slayer-cli/.ai/guidelines/: code-style.md  domain.md  testing.md
slayer-cli/src/slayer_cli/: __main__.py  constants.py  errors.py  version.py
slayer-cli/src/slayer_cli/accounts/: alias.py  attribution.py  base.py  detect.py  history.py  provisioned.py  remove.py  store.py  switch.py
slayer-cli/src/slayer_cli/auth/: beacon.py
slayer-cli/src/slayer_cli/autoswitch/: __init__.py  classify.py  decide.py  hookinstall.py  hooks.py  registry.py  relaunch.py  signals.py  wrapper.py
slayer-cli/src/slayer_cli/cli/: main.py
slayer-cli/src/slayer_cli/config/: __init__.py  model.py  store.py
slayer-cli/src/slayer_cli/credstore/: __init__.py  claude_json.py  file_store.py  keychain_store.py  refresh.py
slayer-cli/src/slayer_cli/models/: account.py  usage_windows.py
slayer-cli/src/slayer_cli/platform/: cache.py  http.py  lock.py  paths.py  process.py
slayer-cli/src/slayer_cli/provider/: __init__.py  writer.py
slayer-cli/src/slayer_cli/strategy/: __init__.py  recover.py  select.py
slayer-cli/tests/: test_version.py
slayer-cli/tests/tui/: test_app.py  test_app_snapshot.py
(+499 files in other folders)
