[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slayer-cli"
version = "0.1.0"
description = "token-slayer client — Claude CLI account management"
requires-python = ">=3.10"
dependencies = ["click>=8.1", "textual>=0.60", "pydantic>=2.6", "keyring>=24", "httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-textual-snapshot>=0.4", "respx>=0.21"]

[project.scripts]
token-slayer = "slayer_cli.cli.main:main"
slayer = "slayer_cli.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/slayer_cli"]
